Bug 1340865 - Handle non-parser-created module scripts r=smaug